# other

./: .gitignore  README.md  mp3decoder.txt
GameLeaderboard/: GameLeaderboard.slnx  chat.txt
GameLeaderboard/GameLeaderboard/: GameLeaderboard.csproj  Program.cs
GameLeaderboard/GameLeaderboard/Properties/: AssemblyInfo.cs
MicSpammer/: AudioLoader.cpp  AudioLoader.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Copilot.txt  FileBrowserWidget.cpp  FileBrowserWidget.h  MediaManager.cpp  MediaManager.h  MicCapture.cpp  MicCapture.h  MicSpammerWindow.cpp  MicSpammerWindow.h  NumpadWidget.cpp  NumpadWidget.h  ProfileManager.cpp  ProfileManager.h  SoundInstance.cpp  SoundInstance.h  TODO.txt  WasapiManager.cpp  WasapiManager.h  arch.txt  gui.cpp  gui.h  main.cpp  resources.qrc  wasapi initialize.txt
NOX-ADPCM/: Audio.idx  New Text Document.txt  adpcm2wav.py  encode_adpcm.ipynb  encode_adpcm.py  tut_adpcm.ipynb  txt.txt  txt2.txt
NOX-ADPCM/BagFileTool-latest/BagFileTool/: Program.cs
csharp/: chat.txt
csharp/C# Code 1/: Program.cs
csharp/C# Code 10/: Program.cs
csharp/C# Code 11/: Animal.cs  AnimalFarm.cs  Box.cs  Program.cs
csharp/C# Code 12/: Animal.cs  Owner.cs  Program.cs
csharp/C# Code 13/: BankAcct.cs  Program.cs
csharp/C# Code 14/: Program.cs
csharp/C# Code 15/: Animal.cs  Program.cs
csharp/C# Code 16/: Program.cs
csharp/C# Code 17/: MainWindow.xaml  MainWindow.xaml.cs
csharp/C# Code 2/: Animal.cs  Program.cs  ShapeMath.cs
csharp/C# Code 3/: Animal.cs  Program.cs
csharp/C# Code 4/: Animal.cs  AnimalIDInfo.cs  Dog.cs  Program.cs
csharp/C# Code 5/: Circle.cs  Program.cs  Rectangle.cs  Shape.cs
csharp/C# Code 6/: ICommand.cs  IDrivable.cs  IElectronicDevice.cs  PowerButton.cs  Program.cs  TVRemote.cs  Television.cs  Vehicle.cs
csharp/C# Code 8/: Program.cs
csharp/C# Code 9/: Animal.cs  Program.cs
csharp/Project/CSharpCourse/: CSharpCourse.csproj  CSharpCourse.sln
csharp/Project/CSharpCourse/Properties/: AssemblyInfo.cs
hackerrank/: AttributeParser.cpp  main.txt
hackerrank/past/: Count_Elements_Greater_Than_Previous_Average.c
hackerrank/past/attributeParser/: AttributeParser.cpp
hackerrank/past/calendar/: cal.cpp
hackerrank/past/getMoneySpent/: getMoneySpent.cpp
hackerrank/past/magicSquare/: magicSquare.cpp
hackerrank/past/missingPositive/: missingPositiveInt.cpp
hackerrank/past/palindrome/: palindrome.cpp
hackerrank/past/removeKthNode/: input.txt
hackerrank/past/salesbymatch/: salesbymatch.cpp
hackerrank/sorting/Bubble_Sort/: input.txt
hackerrank/sorting/Insertion_Sort/: insertionSort1.cpp
hackerrank/sorting/Selection_sort/: input.txt  selectionSort.cpp
study/: main.txt  radixSort.cpp  wtf.cpp
study/hackerrank/: Merge_and_Sort_Intervals.cpp
study/hackerrank/calendar/: cal_conv.cpp
study/other/: heap.cpp  link.cpp
study/past/magicSquare/: magicSquare copy.cpp
study/past/removeKthNode/: removeKthNode.cpp
study/sorting/Bubble_Sort/: bubbleSort.cpp
study/sorting/Insertion_Sort/: insertionSort2.cpp
study/sorting/Radix_Sort/: input.txt
study/threading/: output.txt  thread1.cpp  thread10.cpp  thread11.cpp  thread12.cpp  thread13.cpp  thread14_P-C copy.cpp  thread14_P-C.cpp  thread14_ProducerConsumer copy.cpp  thread14_ProducerConsumer.cpp  thread15.cpp  thread16.cpp  thread17-DiningPhilosophers.cpp  thread18_ReadersWriters.cpp  thread19.cpp  thread2.cpp  thread20.cpp  thread3.cpp  thread4.cpp  thread5.cpp  thread6.cpp  thread7.cpp  thread8.cpp  txt.txt
